--- a/assets/css/confirmdelete.css
+++ b/assets/css/confirmdelete.css
@@ -3,6 +3,7 @@ html, body {
     overflow: hidden;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 11px;
+    height: 100%;
 }
 
 #confirm_delete {
