--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -50,7 +50,7 @@
     overflow-x: hidden;
     margin-top: 5px;
     /* height: 100%; */
-    padding-bottom: 20px;
+    /* padding-bottom: 20px; */
 }
 
 .sb_view .item.active {
@@ -58,8 +58,7 @@
 }
 
 .sb_home {
-    height: 90%;
-
+    /* height: 95%; */
 }
 
 .sb_home::-webkit-scrollbar {
