--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -9,7 +9,7 @@
     color: var(--text);
     padding-left: 5px;
     padding-right: 5px;
-    height: 90%;
+    /* height: 90%; */
     width: 300px;
 }
 
@@ -45,7 +45,7 @@
 
 .sb_view {
     /* border: 1px solid var(--border); */
-    /* border: 1px solid red; */
+    /* border: 1px solid green; */
     overflow-y: auto;
     overflow-x: hidden;
     margin-top: 5px;
