--- a/views/find.html
+++ b/views/find.html
@@ -11,7 +11,7 @@
     </div>
 
     <div class="">
-        <input type="text" id="find" tabindex="2" spellcheck="false" class="find_input" placeholder="Search">
+        <input type="text" id="find" tabindex="2" spellcheck="false" class="find_input input" placeholder="Search">
     </div>
 
     <div class="grid2">
@@ -35,23 +35,23 @@
     <div class="">
         <div class="">
             <label class="label">Start Date</label>
-            <input type="date" id="start_date" name="start_date" class="" placeholder="enter start date" title="enter start date">
+            <input type="date" id="start_date" name="start_date" class="input" placeholder="enter start date" title="enter start date">
         </div>
 
         <div class="">
             <label class="label">End Date</label>
-            <input type="date" id="end_date" name="end_date" class="" placeholder="enter end date" title="Searh by end date">
+            <input type="date" id="end_date" name="end_date" class="input" placeholder="enter end date" title="Searh by end date">
         </div>
     </div>
 
     <div class="">
         <div class="">
             <label for="depth" class="label" title="Number of levels to search">Depth</label>
-            <input type="text" id="depth" min="1" max="5" class="find_input" placeholder="depth" title="Number of levels to search" value="5">
+            <input type="text" id="depth" min="1" max="5" class="find_input input" placeholder="depth" title="Number of levels to search" value="5">
         </div>
         <div class="">
             <label for="find_size" class="label">Size</label>
-            <input type="text" id="find_size" class="find_input" placeholder="Size" title="Search by size. Example: > 100">
+            <input type="text" id="find_size" class="find_input input" placeholder="Size" title="Search by size. Example: > 100">
         </div>
     </div>
 
