--- a/views/merge.html
+++ b/views/merge.html
@@ -58,6 +58,18 @@
         <table class="destination_table">
             <thead>
                 <tr>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                    <th>
+                        <select class="input merge-action-all">
+                            <option value="0">-- Action --</option>
+                            <option value="0">Skip All</option>
+                            <option value="1">Replace All</option>
+                        </select>
+                        <br />
+                    </th>
+                <tr>
                     <th>Destination</th>
                     <th>Source Date</th>
                     <th>Destination Date</th>
