--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -23,7 +23,6 @@
     position: relative;
     white-space: nowrap;
     color: var(--text);
-    /* font-weight: bold; */
     padding: 6px;
     cursor: pointer;
 }
@@ -46,10 +45,11 @@
 .sb_view {
     /* border: 1px solid var(--border); */
     /* border: 1px solid green; */
+    /* background-color: var(--main); */
     overflow-y: auto;
     overflow-x: hidden;
     margin-top: 5px;
-    /* height: 100%; */
+    height: 90%;
     /* padding-bottom: 20px; */
 }
 
