--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -40,11 +40,10 @@ body {
 .main {
     /* position: relative; */
     /* background: linear-gradient(to right, var(--main), var(--menu)); */
-    border-left: 1px solided;
     background: var(--main);
     border-radius: 5px;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     justify-content: space-around;
     z-index: 1;
 }
