--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1006,6 +1006,7 @@ input[type=text]:focus {
 .highlight_select {
     border-radius: 5px;
     background: var(--highlight-select);
+    /* box-shadow: 0 0 3px var(--orange); */
     user-select: none;
 }
 
