--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -1,14 +1,16 @@
 
 .sidebar {
+    /* font-size: 14px; */
+    /* line-height: 18px; */
     /* overflow-y: auto; */
-    /* border: 1px solid var(--border); */
+    border-right: 1px solid var(--border);
     position: relative;
     box-sizing: border-box;
     background-color: var(--sidebar);
     /* background: linear-gradient(to right, var(--sidebar), var(--main)); */
-    color: var(--text);
-    padding-left: 5px;
-    padding-right: 5px;
+    color: white;
+    padding-left: 10px;
+    padding-right: 10px;
     /* height: 90%; */
     width: 300px;
 }
@@ -76,6 +78,7 @@
     /* border-right: 1px solid var(--border); */
     height:100%;
     z-index: 3;
+    /* display: none; */
 }
 
 #minibar .bi {
@@ -217,6 +220,10 @@
 
 .workspace_accordion:hover {
     cursor: pointer;
+}
+
+.workspace_accordion {
+    color: var(--text);
 }
 
 .workspace_div {
